# rust-agent-stack

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TASK.md  VERSIONING.md  deny.toml  test_explorer.html
.cargo/: config.toml
.claude/commands/: commit.md  execute.md  ideate.md  kellnr-release.md  orchestrate.md  plan.md  prime_ui.md  raitro.md  smalltest.md  update_docs.md
.github/workflows/: README.md  auth-wasm-security.yml  bench.yml  cargo-deny.yml  ci.yml  code-security.yml  security-audit.yml  security-sarif.yml  test-coverage.yml
agent-research/: rust-api-to-ts-client.md
crates/core/ras-version-core/: Cargo.toml
crates/core/ras-version-core/src/: lib.rs
crates/identity/ras-identity-local/: Cargo.toml  README.md
crates/identity/ras-identity-local/src/: lib.rs
crates/identity/ras-identity-oauth2/: Cargo.toml  README.md
crates/identity/ras-identity-oauth2/examples/: google_oauth2.rs
crates/identity/ras-identity-oauth2/src/: config.rs  error.rs  lib.rs  provider.rs  tests.rs
crates/identity/ras-identity-session/: Cargo.toml  README.md
crates/identity/ras-identity-session/src/: lib.rs
crates/identity/rust-identity-core/: Cargo.toml
crates/identity/rust-identity-core/src/: lib.rs
crates/identity/rust-identity-local/: Cargo.toml
crates/identity/rust-identity-local/src/: lib.rs
crates/identity/rust-identity-oauth2/: Cargo.toml
crates/identity/rust-identity-oauth2/examples/: google_oauth2.rs
crates/identity/rust-identity-oauth2/src/: client.rs  error.rs  lib.rs  provider.rs  state.rs  tests.rs  types.rs
crates/identity/rust-identity-session/: Cargo.toml
crates/identity/rust-identity-session/src/: lib.rs
crates/libs/openrpc-types/: Cargo.toml  README.md
crates/libs/openrpc-types/examples/: basic_usage.rs
crates/libs/openrpc-types/src/: components.rs  content_descriptor.rs  error.rs  example.rs  lib.rs  method.rs  openrpc.rs  schema.rs
crates/libs/ras-jsonrpc-bidirectional-client/: Cargo.toml  README.md
crates/libs/ras-jsonrpc-bidirectional-client/examples/: bidirectional_client_usage.rs
crates/libs/ras-jsonrpc-bidirectional-client/src/: client.rs  config.rs  error.rs  lib.rs  native.rs
crates/libs/ras-jsonrpc-core/: Cargo.toml
crates/libs/ras-jsonrpc-core/src/: lib.rs
crates/libs/ras-jsonrpc-macro/: Cargo.toml  README.md
crates/libs/ras-jsonrpc-macro/examples/: comprehensive_demo.rs  explorer_params_demo.rs  openrpc_demo.rs
crates/libs/ras-jsonrpc-macro/src/: client.rs  jsonrpc_explorer_template.html  lib.rs  openrpc.rs  static_hosting.rs
crates/libs/ras-jsonrpc-macro/tests/: error_sanitization_test.rs  explorer_test.rs  http_integration.rs  integration.rs
crates/libs/ras-jsonrpc-types/: Cargo.toml
crates/libs/ras-jsonrpc-types/src/: lib.rs
crates/libs/ras-observability-core/: Cargo.toml  README.md
crates/libs/ras-observability-core/src/: lib.rs
crates/libs/ras-rest-core/: Cargo.toml
crates/libs/ras-rest-core/src/: lib.rs
crates/libs/ras-rest-macro/: Cargo.toml  README.md
crates/libs/ras-rest-macro/src/: client.rs  lib.rs  openapi.rs  static_hosting.rs
crates/libs/ras-rest-macro/tests/: error_sanitization_test.rs  http_integration.rs  xss_protection_test.rs
crates/libs/rust-jsonrpc-core/: Cargo.toml  README.md
crates/libs/rust-jsonrpc-core/src/: auth.rs  lib.rs
crates/libs/rust-jsonrpc-macro/: Cargo.toml  README.md
crates/libs/rust-jsonrpc-macro/examples/: comprehensive_demo.rs  openrpc_demo.rs  usage.rs
crates/libs/rust-jsonrpc-macro/src/: auth.rs  lib.rs  openrpc.rs
crates/libs/rust-jsonrpc-macro/tests/: http_integration.rs  integration.rs
crates/libs/rust-rest-macro/: Cargo.toml  README.md
crates/libs/rust-rest-macro/src/: lib.rs  openapi.rs  static_hosting.rs
crates/libs/rust-rest-macro/static/: placeholder.txt
crates/libs/rust-rest-macro/tests/: http_integration.rs
docs_and_help/llm-txt/: dwind_dominator.md
documentation/: ras-file-macro.md  ras-identity.md  ras-observability.md  ras-rest-macro.md
examples/: README.md
examples/basic-jsonrpc-api/: Cargo.toml
examples/basic-jsonrpc-api/src/: lib.rs
examples/basic-jsonrpc-service/: Cargo.toml  README.md
examples/basic-jsonrpc-service/src/: main.rs
examples/basic-service/: Cargo.toml  README.md
examples/basic-service/src/: main.rs
examples/bidirectional-chat/: README.md
examples/bidirectional-chat-client/: Cargo.toml
examples/bidirectional-chat-client/src/: auth.rs  client.rs  config.rs  main.rs  ui.rs
examples/bidirectional-chat-client/src/ui/: state.rs  widgets.rs
examples/bidirectional-chat-tui/: Cargo.toml  README.md
examples/dominator-example/: Cargo.toml  index.html  package.json  rollup.config.js
examples/dominator-example/src/: lib.rs
examples/file-service-example/: Cargo.toml
examples/file-service-example/src/: main.rs
examples/file-service-wasm/: README.md
examples/google-oauth-example/: .env.example  Cargo.toml  README.md
examples/google-oauth-example/api/: Cargo.toml
examples/google-oauth-example/examples/: test_openrpc.rs
examples/google-oauth-example/server/: Cargo.toml  build.rs
examples/google-oauth-example/server/examples/: test_openrpc.rs
examples/google-oauth-example/server/src/: main.rs  service.rs
examples/google-oauth-example/server/static/: index.html  success.html
examples/google-oauth-example/src/: main.rs  permissions.rs  service.rs
examples/google-oauth-example/static/: api-docs.html  success.html
examples/rest-api-demo/: .env.example  Cargo.toml
examples/rest-api-demo/src/: main.rs
examples/rest-service-example/: .env.example  Cargo.toml
examples/rest-service-example/src/: main.rs
examples/rest-service-example/static/: placeholder.txt
examples/rest-wasm-example/: README.md
examples/wasm-ui-demo/: .gitignore  Cargo.toml  package-lock.json
scraim/: current-spraint.md  current-sprint.md
scraim/retroed/: sprint-1.md  sprint-2.md  sprint-3.md
sketchpad/: auht_provider.rs
specs/: plan.md  ras-jsonrpc-macro.md  ras-rest-macro.md
tests/playwright/: README.md  package-lock.json  package.json  (+1 more)
(+258 files in other folders)
