[workspace]
resolver = "3"
members = [
    "crates/libs/ras-auth-core",
    "crates/libs/ras-jsonrpc-macro", 
    "crates/libs/ras-jsonrpc-core", 
    "crates/libs/ras-jsonrpc-types",
    "crates/libs/ras-rest-macro",
    "crates/libs/openrpc-types",
    "crates/identity/ras-identity-core",
    "crates/identity/ras-identity-local",
    "crates/identity/ras-identity-oauth2",
    "crates/identity/ras-identity-session",
    "examples/basic-service",
    "examples/google-oauth-example",
    "examples/rest-service-example"
]

[workspace.dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
bon = "3.2"
async-trait = "0.1"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio-test = "0.4"
schemars = "0.8"
tracing-subscriber = "0.3"
tower-http = "0.6"
mime_guess = "2.0"
rust-embed = "8.0"
# Testing dependencies
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
rand = "0.8"
futures = "0.3"
