[workspace]
resolver = "3"
members = [
    # Core
    "crates/core/*",
    
    # RPC
    "crates/rpc/ras-jsonrpc-types",
    "crates/rpc/ras-jsonrpc-core",
    "crates/rpc/ras-jsonrpc-macro",
    "crates/rpc/bidirectional/*",
    
    # REST
    "crates/rest/*",
    
    # Identity
    "crates/identity/*",
    
    # Observability
    "crates/observability/*",
    
    # Specs
    "crates/specs/*",
    
    # Tools
    "crates/tools/*",
    
    # Examples
    "examples/basic-jsonrpc/*",
    "examples/oauth2-demo/*",
    "examples/rest-api-demo",
    "examples/wasm-ui-demo",
    "examples/bidirectional-chat/api",
    "examples/bidirectional-chat/server",
    "examples/bidirectional-chat/tui",
]

[workspace.dependencies]
axum = "0.8"
clap = { version = "4.5.39", features = ["derive"] }
dwind = "0.3.2"
dwind-macros = "0.2.2"
dwui = "0.4.0"
futures-signals-component-macro = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
bon = "3.2"
async-trait = "0.1"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio-test = "0.4"
schemars = "1.0.0-alpha.20"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = "0.6"
mime_guess = "2.0"
rust-embed = "8.0"
# Testing dependencies
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
rand = "0.8"
futures = "0.3"
dashmap = "6.1"
# WebSocket dependencies
tokio-tungstenite = "0.26"
url = "2.5"
http = "1.0"
# Client dependencies
dialoguer = "0.11"
console = "0.15"
axum-extra = "0.9"
futures-util = "0.3"
dotenvy = "0.15"
# WASM dependencies  
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tempfile = "3.13"
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
# OAuth/Security dependencies
base64 = "0.22"
sha2 = "0.10"
# OpenTelemetry dependencies
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus = "0.28"
prometheus = "0.13"
# WASM/Frontend dependencies
dominator = "0.5"
futures-signals = "0.3"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
gloo-net = "0.6"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
once_cell = "1.20"
wasm-bindgen-test = "0.3"
