[package]
name = "basic-jsonrpc-service"
version = "0.1.1"
edition = "2024"
publish = false

[features]
default = ["server"]
server = []
client = []

[dependencies]
ras-jsonrpc-macro = { path = "../../crates/libs/ras-jsonrpc-macro", features = ["server"] }
ras-jsonrpc-core = { path = "../../crates/libs/ras-jsonrpc-core" }
ras-jsonrpc-types = { path = "../../crates/libs/ras-jsonrpc-types" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry dependencies
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus = "0.28"
prometheus = "0.13"