[package]
name = "basic-jsonrpc-service"
version = "0.1.1"
edition = "2024"
publish = false

[features]
default = ["server"]
server = []
client = []

[dependencies]
basic-jsonrpc-api = { path = "../basic-jsonrpc-api" }
ras-jsonrpc-core = { path = "../../crates/libs/ras-jsonrpc-core" }
ras-jsonrpc-types = { path = "../../crates/libs/ras-jsonrpc-types" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }

# OpenTelemetry dependencies
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus = "0.28"
prometheus = "0.13"