[package]
name = "basic-service"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
rust-jsonrpc-macro = { path = "../../crates/libs/rust-jsonrpc-macro" }
rust-jsonrpc-core = { path = "../../crates/libs/rust-jsonrpc-core" }
rust-jsonrpc-types = { path = "../../crates/libs/rust-jsonrpc-types" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"