[package]
name = "basic-service"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
ras-jsonrpc-macro = { path = "../../crates/libs/ras-jsonrpc-macro" }
ras-jsonrpc-core = { path = "../../crates/libs/ras-jsonrpc-core" }
ras-jsonrpc-types = { path = "../../crates/libs/ras-jsonrpc-types" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"