[package]
name = "bidirectional-chat-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
ras-jsonrpc-bidirectional-client = { path = "../../crates/libs/ras-jsonrpc-bidirectional-client" }
ras-jsonrpc-types = { path = "../../crates/libs/ras-jsonrpc-types" }
ras-auth-core = { path = "../../crates/libs/ras-auth-core" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for auth endpoints
reqwest = { workspace = true, features = ["json"] }

# Configuration
dirs = "5.0"
toml = { workspace = true }

# For secure password input
rpassword = "7.3"

[[bin]]
name = "bidirectional-chat-client"
path = "src/main.rs"