[package]
name = "dominator-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
basic-jsonrpc-api = { path = "../basic-jsonrpc-api", default-features = false, features = ["client"]}

dominator = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-signals = "0.3"
gloo-events = "0.2"
gloo-timers = "0.3"
gloo-utils = "0.2"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
reqwest.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
