[package]
name = "dominator-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
basic-jsonrpc-api = { path = "../basic-jsonrpc-api", default-features = false, features = ["client"]}

dominator = "0.5"
dwind = "0.3"
dwind-macros = "0.2"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
futures-signals = "0.3"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
gloo-net = "0.6"
serde.workspace = true
serde_json.workspace = true
web-sys.workspace = true
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
reqwest.workspace = true
once_cell = "1.20"

[dev-dependencies]
wasm-bindgen-test = "0.3"
