[package]
name = "file-service-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ras-file-macro = { path = "../../crates/rest/ras-file-macro" }
ras-auth-core = { path = "../../crates/core/ras-auth-core" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true }
tokio-util = { workspace = true }