[package]
name = "google-oauth-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# JSON-RPC infrastructure
rust-jsonrpc-macro = { path = "../../crates/libs/rust-jsonrpc-macro" }
rust-jsonrpc-core = { path = "../../crates/libs/rust-jsonrpc-core" }
rust-jsonrpc-types = { path = "../../crates/libs/rust-jsonrpc-types" }

# Identity management
rust-identity-core = { path = "../../crates/identity/rust-identity-core" }
rust-identity-oauth2 = { path = "../../crates/identity/rust-identity-oauth2" }
rust-identity-session = { path = "../../crates/identity/rust-identity-session" }

# Web framework and utilities
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional dependencies for this example
tracing-subscriber = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
dotenvy = "0.15"
mime_guess = "2.0"