[package]
name = "rest-service-example"
version = "0.1.0"
edition = "2024"
description = "Example REST service using ras-rest-macro"

[dependencies]
# REST and JSON-RPC infrastructure
ras-rest-macro = { path = "../../crates/libs/ras-rest-macro" }
ras-auth-core = { path = "../../crates/libs/ras-auth-core" }

# Identity management
ras-identity-core = { path = "../../crates/identity/ras-identity-core" }
ras-identity-local = { path = "../../crates/identity/ras-identity-local" }
ras-identity-session = { path = "../../crates/identity/ras-identity-session" }

# Web framework and utilities
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional dependencies
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
dotenvy = "0.15"
