[package]
name = "wasm-ui-demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
basic-jsonrpc-api = { path = "../basic-jsonrpc/api", default-features = false, features = ["client"]}

dominator = { workspace = true }
dwind = { workspace = true }
dwind-macros = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
futures-signals = { workspace = true }
gloo-events = { workspace = true }
gloo-timers = { workspace = true }
gloo-utils = { workspace = true }
gloo-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
wee_alloc = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
