[package]
name = "ras-version-core"
version = "0.1.0"
edition = "2024"
description = "Core traits for versioned API migrations in Rust Agent Stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[dependencies]
