[package]
name = "ras-identity-local"
version = "0.1.1"
edition = "2024"
description = "Local username/password authentication provider with Argon2 hashing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[features]
timing-tests = []

[dependencies]
ras-identity-core = { path = "../ras-identity-core" }

async-trait = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }