[package]
name = "rust-identity-local"
version = "0.1.1"
edition = "2024"

[dependencies]
rust-identity-core = { path = "../rust-identity-core" }

async-trait = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }