[package]
name = "rust-identity-oauth2"
version = "0.1.1"
edition = "2024"
description = "OAuth2 authentication provider with Google support, PKCE, and state management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[dependencies]
rust-identity-core = { path = "../rust-identity-core", version = "0.1.1" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }

# OAuth2 specific dependencies
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = "0.6"
tracing-subscriber = "0.3"

# For the example
rust-identity-session = { path = "../rust-identity-session" }