[package]
name = "rust-identity-session"
version = "0.1.1"
edition = "2024"
description = "JWT session management and authentication provider implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[dependencies]
rust-identity-core = { path = "../rust-identity-core", version = "0.1.1", registry = "kellnr" }
rust-jsonrpc-core = { path = "../../libs/rust-jsonrpc-core", version = "0.1.1", registry = "kellnr" }

async-trait = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust-identity-local = { path = "../rust-identity-local", version = "0.1.1", registry = "kellnr" }