[package]
name = "openrpc-types"
version = "0.1.0"
edition = "2024"
description = "Complete Rust types for the OpenRPC 1.3.2 specification with serde support, bon builders, and validation"
keywords = ["openrpc", "json-rpc", "api", "specification", "types"]
categories = ["api-bindings", "data-structures", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
default = []
json-schema = ["schemars"]

[dev-dependencies]
tokio-test = { workspace = true }