[package]
name = "ras-jsonrpc-types"
version = "0.1.1"
edition = "2024"
description = "JSON-RPC 2.0 protocol types and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }