[package]
name = "ras-rest-core"
version = "0.1.0"
edition = "2024"
description = "Core types and traits for REST services in Rust Agent Stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ras-auth-core = { path = "../ras-auth-core" }