[package]
name = "rust-jsonrpc-core"
version = "0.1.1"
edition = "2024"
description = "Core types and traits for the rust-jsonrpc crate family"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rust-jsonrpc-types = { path = "../rust-jsonrpc-types" }