[package]
name = "rust-jsonrpc-core"
version = "0.1.1"
edition = "2024"
description = "Core types and traits for the rust-jsonrpc crate family"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust-jsonrpc-types = { path = "../rust-jsonrpc-types", version = "0.1.1", registry = "kellnr" }
rust-auth-core = { path = "../rust-auth-core" }