[package]
name = "rust-jsonrpc-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
bon = { workspace = true }
axum = { workspace = true }
rust-jsonrpc-core = { path = "../rust-jsonrpc-core" }
rust-jsonrpc-types = { path = "../rust-jsonrpc-types" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
