[package]
name = "rust-rest-macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for type-safe REST APIs with auth integration and OpenAPI document generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust-agent-stack"
homepage = "https://github.com/example/rust-agent-stack"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
rust-auth-core = { path = "../rust-auth-core" }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
rust-identity-session = { path = "../../identity/rust-identity-session" }
rust-jsonrpc-core = { path = "../rust-jsonrpc-core" }
futures = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }